# profitpeek-dashboard-mvp

./: .gitignore  ANALYTICS_CONFIG.md  ANALYTICS_SETUP.md  API_CREDENTIALS_GUIDE.md  API_KEYS_CHEAT_SHEET.md  BETA_TESTING.md  BETA_TESTING_GUIDE.md  DATA_INTEGRATION_ARCHITECTURE.md  DATA_INTEGRATION_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ENHANCEMENTS_SUMMARY.md  GOOGLE_ADS_QUICK_START.md  INTEGRATION_SUMMARY.md  LANDING_PAGE.md  MARKETING_PAGE.md  META_ADS_QUICK_START.md  META_ADS_SETUP.md  PRODUCTION_URLS.md  QUICK_START_API_KEYS.md  README.md  RENDER_DEPLOYMENT.md  SHOPIFY_APP_LISTING.md  SHOPIFY_APP_SETUP.md  SHOPIFY_APP_STORE.md  SHOPIFY_QUICK_START.md  SHOPIFY_SETUP_GUIDE.md  VERCEL_DEPLOYMENT.md  deploy.sh  docker-compose.yml  env.example  netlify.toml  package-lock.json  package.json  push-to-github.sh  quick-deploy.sh  setup.sh  shopify.app.toml  test_google_ads.py  test_klaviyo.py  (+3 more)
apps/api/: advanced_profit_analytics.py  alembic.ini  app.py  data_integration_service.py  enhanced_data_service.py  env.production  google_ads_connector.py  klaviyo_connector.py  meta_ads_connector.py  postscript_connector.py  profit_calculator.py  pyproject.toml  real_time_profit_tracker.py  requirements.txt  requirements.txt.save  security_manager.py  simple_app.py  smart_dashboard_features.py  test_simple.py
apps/api-simple/: requirements.txt
apps/api-simple/src/: main.py
apps/api/data_connectors/: __init__.py  base_connector.py  facebook_connector.py  google_connector.py  klaviyo_connector.py  postscript_connector.py  shopify_connector.py
apps/api/migrations/: env.py
apps/api/src/: main.py
apps/api/src/auth/: middleware.py  shopify.py
apps/api/src/config/: settings.py
apps/api/src/db/: database.py  init.sql  models.py
apps/api/src/routes/: auth.py  backfill.py  dashboard.py  webhooks.py
apps/api/src/services/: backfill_service.py  profit_calculator.py  shopify_client.py  webhook_processor.py
apps/api/src/utils/: currency.py  dedup.py  time_periods.py
apps/api/src/webhooks/: handlers.py
apps/web/: next.config.js  package.json  tailwind.config.js
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web/.next/cache/: .tsbuildinfo
(+75 files in other folders)
